[package]
name = "discord-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.25", features = ["macros"] }
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend", "unstable_discord_api"], version = "0.10.9"}
dotenv = "0.15.0"